--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,5 +39,7 @@ spring:
     multipart:
       max-file-size: 2MB
       max-request-size: 2MB
-        
+endpoints:
+  cors:
+    allowed-origins: "*"          
         
